<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlideCalc</string>
    <string name="list_saved_track">List saved track</string>
    <string name="setting_map_box">Setting</string>
    <string name="app_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="save_and_close">Save and close</string>
    <string name="back">Back</string>

    <string name="web" translatable="false"><![CDATA[<html><meta charset=\"utf-8\"><body><p style=\"color:#A0A0A0;text-indent: 20px; text-align: justify;\">{content}</p></body></html> ]]></string>
    <string name="multiple_send_help">Allows you to select multiple commands</string>
    <string name="server_url">Server URL where device use</string>
    <string name="server_url_title">Server URL</string>


    <string name="start_altitude_title">Start altitude</string>
    <string name="start_altitude">The height of the airport with respect to which there is a calculation of height</string>

    <string name="interval_update_title">Interval</string>
    <string name="interval_update">The period in milliseconds between GPS measurements</string>

    <string name="server_protocol">Protocol type</string>
    <string name="navigation_drawer_open">open</string>
    <string name="server_protocol_title">Protocol use</string>
    <string name="altitude_k">Altitude &amp; Kmax</string>
    <string name="track_list">Track List</string>
    <string name="build_track">Build track</string>
    <string name="set_wind_direction">Wind setting</string>
    <string name="rectangular_landing_pattern">rectangular landing pattern</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoibWF4aXNsYXYiLCJhIjoiY2lxa3o3Nm9oMDAya2l3bTJ3ZDN0MDRrdSJ9.Ty19_lyeTVUu8OxxDK8Ymg</string>
    <string name="lift_to_drag_ratio" translatable="false">Lift-to-drag ratio (max):</string>
    <string name="optimal_speed" translatable="false">Speed K(max):</string>
    <string name="current_altitude" translatable="false">Current Altitude:</string>
    <string name="set_start_altitude" translatable="false">Start Altitude:</string>
    <string name="set_current_start_altitude" translatable="false">current</string>
    <string name="ratio_landing_fly" translatable="false">fly landing ratio</string>
    <string name="ratio_landing_final" translatable="false">final landing ratio</string>
    <string name="define_starting_point" translatable="false">Define starting point</string>
    <string name="permission_ifo" translatable="false"> <![CDATA[
    <html>
     <style type=\"text/css\">
     *{
      text-align: justify;
     }
     p{
        font-size: 18px;
        text-indent: 20px;
        margin: 0;
        padding: 0;
     }
    </style>
    <body>
        <p>For the application work, location data is required. </p>
        <p>It is worth noting that the application will not use your location data in the background without an explicitly open interface.</p>
    </body>
 </html>
]]>
    </string>

</resources>
