<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_height"
            android:id="@+id/start_altitude"
            android:title="@string/altitude_k" />
        <item
            android:id="@+id/wind_menu_item"
            android:icon="@drawable/ic_menu_wind"
            android:title="@string/set_wind_direction" />
        <item
            android:id="@+id/rectangular_landing_pattern"
            android:icon="@drawable/ic_icons8_airplane_landing_64"
            android:title="@string/rectangular_landing_pattern" />
    </group>

    <group>
        <item
            android:id="@+id/list_saved_track"
            android:title="@string/track_list" />
    </group>
</menu>
