<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/current_altitude" />

        <TextView
            android:id="@+id/current_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="--" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/set_start_altitude"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/set_current"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/set_current_start_altitude"
                android:textSize="8sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/start_altitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:inputType="numberDecimal|numberSigned"
            android:selectAllOnFocus="true"
            android:text="0.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/lift_to_drag_ratio" />

        <EditText
            android:id="@+id/lift_to_drag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:text="0.0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/optimal_speed" />

        <EditText
            android:id="@+id/optimal_speed_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:text="0.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Save" />
    </LinearLayout>

</LinearLayout>